# movie-autotranslate

./: AGENTS.md  DEV_TASKS.md  MANUAL_TASKS.md  Makefile
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  queue.py
backend/app/core/: config.py  database.py
backend/app/dependencies/: security.py
backend/app/models/: __init__.py
backend/app/routes/: assets.py  health.py  jobs.py  metrics.py  uploads.py
backend/app/schemas/: assets.py  common.py  jobs.py  uploads.py
backend/app/services/: assets.py  jobs.py  storage.py
backend/tests/: test_health.py  test_metrics_cache.py
docs/: README.md  api.md  ci.md  express-gateway.md  frontend.md  mobile.md  observability.md  openapi.json  openapi.yaml  pipeline.md  security.md
express-gw/: jest.config.cjs  package.json  tsconfig.json
mobile/: App.tsx  app.json  jest.config.js  package.json
ops/: docker-compose.yml
prompts-dubbing-ia/: 00_overview.md  01_architecture.md  02_backend_fastapi.md  02b_backend_express.md  03_asr_whisper.md  04_mt_translation.md  05_tts_generation.md  06_diarization.md  07_audio_mix_and_hls.md  08_frontend_web.md  09_frontend_react_native.md  10_devops_compose.md  11_observability.md  12_api_and_schemas.md  13_testing_ci.md  14_security_ethics.md  README.md  (+1 more)
workers/: Dockerfile  celery_app.py  config.py  pyproject.toml  requirements.txt
workers/asr/: whisper.py
workers/common/: artifacts.py  assets.py  db.py  jobs.py  logging.py  metrics.py  paths.py  storage.py
workers/diarization/: basic.py
workers/mix/: assemble.py
workers/mt/: translate.py
workers/pipeline/: tasks.py
workers/tests/: test_mix.py  test_pipeline_utils.py  test_tts.py
workers/tts/: synth.py
(+28 files in other folders)
