[tool.poetry]
name = "movie-autotranslate-workers"
version = "0.1.0"
description = "Pipeline workers for ASR, MT, TTS, mixing, and packaging."
authors = ["Movie Autotranslate Team <devs@example.com>"]
packages = [{include = "workers"}]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
redis = "^5.0.4"
pydantic = "^2.7.1"
faster-whisper = "^0.10.0"
libretranslatepy = "^2.1.1"
numpy = "^1.26.4"
soundfile = "^0.12.1"
scipy = "^1.11.4"
pydub = "^0.25.1"
ffmpeg-python = "^0.2.0"
python-multipart = "^0.0.9"
tenacity = "^8.3.0"
"piper-tts" = "^1.2.0"
pyloudnorm = "^0.1.1"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.12.0"
ruff = "^0.4.2"
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
